--- a/CapstoneProject/Views/Movie/SingleMovie.cshtml
+++ b/CapstoneProject/Views/Movie/SingleMovie.cshtml
@@ -28,71 +28,83 @@
 </head>
 
 <body>
-    @{
-        var movieData = ViewBag.movie;
-    }
     <section>
         <div class="container">
             <div class="mt-4 p-5 bg-dark rounded">
                 <div class="row">
                     <div class="col-sm-4">
-                        <img src="@Model.MovieData[0].PosterImageUrl" alt="Movie poster" style="width: -webkit-fill-available;">
+                        <img src="@Model.MovieData.PosterImageUrl" alt="Movie poster" style="width: -webkit-fill-available;">
                     </div>
                     <div class="col-sm-8" style="color: white;">
-                        <h2>@Model.MovieData[0].Title</h2><br/>
-                        <p>@Model.MovieData[0].Description</p>
+                        <h2>@Model.MovieData.Title</h2><br/>
+                        <p>@Model.MovieData.Description</p>
                         <h4>More details:</h4>
-                        <p>Release Date: @Model.MovieData[0].ReleaseDate</p>
-                        <p>Writer: @Model.MovieData[0].Writer</p>
-                        <p>Director: @Model.MovieData[0].Director</p>
-                        <p>Actors: @Model.MovieData[0].Actores</p>
-                        <p>Language: @Model.MovieData[0].Language</p>
-                        <p>RunTime: @Model.MovieData[0].RunTime</p>
-                        <p>Box Office: @Model.MovieData[0].BoxOffice</p>
-                        <!-- <p>Average movie rating: </p> -->
-                        <!-- Button to Open the Modal -->
-                        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#review">
-                            Write a review
-                        </button>
-                        
-                        <!-- The Modal -->
-                        <div class="modal" id="review">
-                            <div class="modal-dialog modal-dialog-centered">
-                                <div class="modal-content">
+                        <p>Release Date: @Model.MovieData.ReleaseDate</p>
+                        <p>Writer: @Model.MovieData.Writer</p>
+                        <p>Director: @Model.MovieData.Director</p>
+                        <p>Actors: @Model.MovieData.Actores</p>
+                        <p>Language: @Model.MovieData.Language</p>
+                        <p>RunTime: @Model.MovieData.RunTime</p>
+                        <p>Box Office: @Model.MovieData.BoxOffice</p>
+                        @{
+                            double averageRating = Model.ListReviews.Any() ? Model.ListReviews.Average(r => r.UserRate) : 0;
+                        }
+                        <p>Average movie rating: @averageRating.ToString("0.00")</p>
+
+                        @if (User.Identity.IsAuthenticated)
+                        {
+                            <!-- Button to Open the Modal -->
+                            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#review">
+                                Write a review
+                            </button>
                             
-                                    <!-- Modal Header -->
-                                    <div class="modal-header">
-                                    <h4 class="modal-title">Write a review</h4>
-                                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-                                    </div>
-                            
-                                    <!-- Modal body -->
-                                    <div class="modal-body">
-                                        <!-- Rating with drag option -->
-                                        <label for="customRange" class="form-label">Enter Rating from 1 to 10</label>
-                                        <div class="row">
-                                            <div class="col-sm-6">
-                                                <p>1</p>
-                                            </div>
-                                            <div class="col-sm-6" style="text-align: end;">
-                                                <p>10</p>
-                                            </div>
+                            <!-- The Modal -->
+                            <div class="modal" id="review">
+                                <div class="modal-dialog modal-dialog-centered">
+                                    <div class="modal-content">
+                                
+                                        <!-- Modal Header -->
+                                        <div class="modal-header">
+                                        <h4 class="modal-title">Write a review</h4>
+                                        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
                                         </div>
-                                        <input type="range" class="form-range" id="customRange" step="10">
-                                        <div class="mb-3">
-                                            <textarea class="form-control" id="formControlTextarea1" rows="3" placeholder="Enter review ..."></textarea>
-                                        </div>
+
+                                        @using (Html.BeginForm("WriteReview", "Reviews", FormMethod.Post, new {id = "reviewForm", @class = "needs-validation", nonvalidate = "true"}))
+                                        {
+                                            @Html.AntiForgeryToken()
+                                                <input type="hidden" name="movieId" value="@Model.MovieData.Id" />
+                                                <input type="hidden" name="userId" value="@User.FindFirst(System.Security.Claims.ClaimTypes.NameIdentifier)?.Value" />
+                                            <!-- Modal body -->
+                                            <div class="modal-body">
+                                                <!-- Rating with drag option -->
+                                                
+                                                    <label for="rating">Rating (between 0 to 10):</label>
+                                                    <input type="range" id="rating" name="rating" min="0" max="10">
+                                                    <div class="mb-3 form-group ">
+                                                        <label for="reviewText">Enter review:</label>
+                                                        <textarea class="form-control" name="reviewText" id="reviewText" rows="3" placeholder="Enter review ..."></textarea>
+                                                    </div>
+                                            </div>
+                                    
+                                            <!-- Modal footer -->
+                                            <div class="modal-footer">
+                                                <button type="submit" class="btn btn-success" data-bs-dismiss="modal" id="submitButton">Submit</button>
+                                                <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Cancel</button>
+                                            </div>
+                                        }                                
                                     </div>
-                            
-                                    <!-- Modal footer -->
-                                    <div class="modal-footer">
-                                        <button type="button" class="btn btn-success" data-bs-dismiss="modal">Submit</button>
-                                        <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Cancel</button>
-                                    </div>
-                            
                                 </div>
                             </div>
-                        </div>
+                        }
+                        else
+                        {
+                            <a href="/Identity/Account/Login" class="btn btn-link">
+                                <!-- Button to Open the Modal -->
+                                <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#review">
+                                    Write a review
+                                </button>
+                            </a>
+                        }
                     </div>
                 </div>
             </div>
@@ -103,10 +115,11 @@
                     <!-- Reviews in database -->
                     @foreach (var review in Model.ListReviews.OrderByDescending(r => r.Timestamp))
                     {
+                        var userDetails = await Model.UserManager.FindByIdAsync(review.UserId);
                         <li class="list-group-item">
                             <div class="row">
                                 <div class="col-sm-2 user-details">
-                                    <p>@review.UserId</p>
+                                    <p>@userDetails.UserName</p>
                                     <!-- Keeping space for a profile photo of user. To be added later. -->
                                     <img src="cinqueterre.jpg" class="rounded-circle" width="90px">
                                 </div>
@@ -115,11 +128,11 @@
                                     <div class="row">
                                         <div class="col-sm-6">
                                             <span>Rating: @review.UserRate</span>
-                                            <i class="fa fa-star rating-color"></i>
-                                            <i class="fa fa-star rating-color"></i>
-                                            <i class="fa fa-star"></i>
-                                            <i class="fa fa-star"></i>
-                                            <i class="fa fa-star"></i>
+                                            @for (int i = 0; i < @review.UserRate; i++)
+                                            {<i class="fa fa-star rating-color"></i>}
+                                            @for (int i = 0; i < 10 - @review.UserRate; i++)
+                                            {<i class="fa fa-star"></i>}
+
                                         </div>
                                         <div class="col-sm-6" style="text-align: right;">
                                             <p>@review.Timestamp</p>
